data/collection/fixes/descriptions/scala/scala-8534
Welcome to Scala version 2.11.0 (Java HotSpot(TM) 64-Bit Server VM, Java 1.8.0).
Type in expressions to have them evaluated.
Type :help for more information.

scala> trait MyTrait {type T; case class SomeData(x: T)}
defined trait MyTrait

scala> class BugTest {def isTheBugHere(in: MyTrait.this.type#SomeData) = false}
<console>:7: error: MyTrait is not an enclosing class
       class BugTest {def isTheBugHere(in: MyTrait.this.type#SomeData) = false}
                                           ^